--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages.properties
@@ -15,10 +15,10 @@
 # under the License.
 #
 ml.timeago.now=just now
-ml.timeago.oneminute.past=one minute ago
-ml.timeago.xminutes.past={0} minutes ago
-ml.timeago.aboutanhour.past=about an hour ago
-ml.timeago.xhours.past={0} hours ago
+ml.timeago.oneminute.past=1m ago
+ml.timeago.xminutes.past={0}m ago
+ml.timeago.aboutanhour.past=1h ago
+ml.timeago.xhours.past={0}h ago
 ml.timeago.oneday.past=yesterday
 ml.timeago.xdays.past={0} days ago
 ml.timeago.aboutamonth.past=about a month ago
