Replaced some message for English property.

--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_en.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_en.properties
@@ -15,15 +15,15 @@
 # under the License.
 #
 ml.timeago.now=just now
-ml.timeago.oneminute.past=one minute ago
-ml.timeago.xminutes.past={0} minutes ago
-ml.timeago.aboutanhour.past=about an hour ago
-ml.timeago.xhours.past={0} hours ago
-ml.timeago.oneday.past=yesterday
-ml.timeago.xdays.past={0} days ago
-ml.timeago.aboutamonth.past=about a month ago
+ml.timeago.oneminute.past=1m ago
+ml.timeago.xminutes.past={0}m ago
+ml.timeago.aboutanhour.past=1h ago
+ml.timeago.xhours.past={0}h ago
+ml.timeago.oneday.past=1d ago
+ml.timeago.xdays.past={0}d ago
+ml.timeago.aboutamonth.past=1 month ago
 ml.timeago.xmonths.past={0} months ago
-ml.timeago.aboutayear.past=about a year ago
+ml.timeago.aboutayear.past=1 year ago
 ml.timeago.overayear.past=over a year ago
 ml.timeago.almosttwoyears.past=almost two years ago
 ml.timeago.xyears.past={0} years ago
